Fixed bug + added nowrap to codeexample

--- a/src/userinterface/MimotoCMS/components/pages/entities/EntityDetail/_EntityDetail.scss
+++ b/src/userinterface/MimotoCMS/components/pages/entities/EntityDetail/_EntityDetail.scss
@@ -97,6 +97,7 @@ div.MimotoCMS_pages_entities_EntityDetail__codeexample {
     overflow: scroll;
     border: 1px solid #f5f5f5;
     background-color: #f1f1f1;
+    white-space: nowrap;
 }
 
 div.MimotoCMS_pages_entities_EntityDetail__codeexample-title {
